<resources>
    <string name="app_name">Flag Game</string>
    <string name="title_name">Guessing the Flag</string>
    <string name="start_game">Start Game</string>
    <string name="score">Score: </string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="submit">Submit</string>
    <string name="theme">Theme</string>
    <string name="clear_settings">Clear Settings</string>

    <string-array name="theme_options">
        <item>Choose a theme</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <string name="thiago">Thiago Lima</string>
    <string name="mariana">Mariana Rangel</string>
    <string name="thiego">Thiego Rechi</string>
    <string name="patricia">Patricia Magalhaes - 448624</string>
    <string name="reset">Reset</string>
    <string name="btn_previous_question">Question</string>
    <string name="btn_next_question">Question</string>
    <string name="option_4">Option 4</string>
    <string name="option_3">Option 3</string>
    <string name="option_2">Option 2</string>
    <string name="option_1">Option 1</string>
    <string name="app_description">A fun quiz game where you guess the country based on its flag!</string>
    <string name="tvTeamMembers">Team Members:</string>
    <string name="tvDate">Date: March 2025</string>
    <string name="img_desc">flag image</string>
    <string name="tv_number_of_questions">Number of Questions:</string>
    <string name="txt_score_placeholder">0</string>
    <string name="question_progress">%1$d/%2$d</string>
    <string name="btn_save">save</string>

</resources>