<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_light"
    android:onClick="openMainMenu">

    <!-- App Name -->

    <!-- Description -->

    <!-- Label "Team Members:" -->

    <!-- LinearLayout com nomes -->

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_name"
        android:textColor="@color/offWhite"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="354dp"
        android:layout_height="39dp"
        android:text="@string/app_description"
        android:textAlignment="center"
        android:textColor="@color/offWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtAppName" />

    <TextView
        android:id="@+id/txtTeamLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/tvTeamMembers"
        android:textAlignment="gravity"
        android:textColor="@color/darkBlue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDescription" />

    <LinearLayout
        android:id="@+id/layoutParticipants"
        android:layout_width="297dp"
        android:layout_height="189dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_start_game"
        android:gravity="center|center_horizontal"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTeamLabel">

        <TextView
            android:id="@+id/tv_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:gravity="center|center_vertical"
            android:padding="10dp"
            android:text="@string/mariana"
            android:textColor="@color/offWhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:gravity="center|center_vertical"
            android:padding="10dp"
            android:text="@string/patricia"
            android:textColor="@color/offWhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_name3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:gravity="center|center_vertical"
            android:padding="10dp"
            android:text="@string/thiago"
            android:textColor="@color/offWhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_name4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:gravity="center|center_vertical"
            android:padding="10dp"
            android:text="@string/thiego"
            android:textColor="@color/offWhite"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:gravity="center_vertical"
        android:text="@string/tvDate"
        android:textAlignment="gravity"
        android:textColor="@color/darkBlue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutParticipants" />

    <Button
        android:id="@+id/btnBackHome"
        android:layout_width="41dp"
        android:layout_height="36dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/baseline_arrow_back_24"
        android:onClick="openMainMenu"
        app:layout_constraintBottom_toTopOf="@+id/txtAppName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
