<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_light"
    android:padding="24dp">

<!--settings title-->

    <TextView
        android:id="@+id/txtSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/settings"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/offWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--number of question and theme selection -->

        <TextView
        android:id="@+id/txtNumQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/tv_number_of_questions"
        android:textColor="@color/offWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSettingsTitle" />

    <EditText
        android:id="@+id/num_questions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="numberOfQuestions"
        android:inputType="number"
        android:textColor="@color/offWhite"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtNumQuestions"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtChooseTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/theme"
        android:textColor="@color/offWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/num_questions" />

    <Spinner
        android:id="@+id/spinner_themes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:textColor="@color/offWhite"
        android:theme="@style/spinnerColor"
        android:entries="@array/theme_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtChooseTheme" />

<!--    the buttons for reset, clear and save are set to be only icons -->
    <LinearLayout
        android:layout_width="149dp"
        android:layout_height="197dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_themes"
        app:layout_constraintVertical_bias="0.21">

        <Button
            android:id="@+id/btn_reset_game"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_restart_game"
            android:contentDescription="@string/reset"
            android:drawableStart="@drawable/baseline_restart_alt_24"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="resetGame"
            android:padding="5dp"
            android:text="@string/reset"
            android:textColor="@color/orange" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_save_settings"
            android:contentDescription="@string/submit"
            android:drawableStart="@drawable/baseline_save_24"
            android:padding="5dp"
            android:text="@string/btn_save"
            android:textColor="@color/orange" />

        <Button
            android:id="@+id/btn_clearSettings"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_clear_settings"
            android:contentDescription="@string/clear_settings"
            android:drawableStart="@drawable/baseline_cancel_24"
            android:padding="5dp"
            android:text="@string/clear_settings"
            android:textColor="@color/orange" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
